--- a/grabcut.ipynb
+++ b/grabcut.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUnx6Lu7iKm7BdBJ4KHklm",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMpMo7n5uw+qyAcpjceu+Bp"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/muhsufyan/opencv/blob/main/grabcut.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -60,7 +49,7 @@
         "id": "_EtUMF2Yjok3",
         "outputId": "a701c2ab-d537-4434-deed-5fab45e128a4"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -201,7 +190,7 @@
         "id": "eLq1iYCDkZ2v",
         "outputId": "9f11212f-bcc1-4d66-e004-1b92b43d79d4"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -229,7 +218,7 @@
         "id": "lh9Yg_N9lsvP",
         "outputId": "02867594-2e8e-4f4e-d5dd-da089044a11a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -293,7 +282,7 @@
         "id": "3D5VOJH9kZtu",
         "outputId": "d3614b30-2199-498e-ca92-bea59113c91f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -320,7 +309,7 @@
         "id": "qCMg8Mefl76S",
         "outputId": "f3a07c61-af76-4646-93da-07d80fa674ea"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +374,7 @@
         "id": "0XGuz43TmBHj",
         "outputId": "534cb2c1-dccd-486f-d4af-dd7b3576473f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -533,7 +522,7 @@
         "id": "T9pQMPK5nf2H",
         "outputId": "66430afd-1aa6-48dd-eb1f-72aaf4684c62"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,7 +557,7 @@
       "metadata": {
         "id": "C80Jr7gjooI-"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -587,7 +576,7 @@
         "id": "-Eowpv8eo8OJ",
         "outputId": "b6bd3bea-a522-4e3c-c289-064d1de11747"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -610,7 +599,7 @@
       "metadata": {
         "id": "JDI3IRRUpGCH"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -622,7 +611,7 @@
       "metadata": {
         "id": "3zF60JWUpLUk"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -637,7 +626,7 @@
         "id": "Jl4xRhGtpgr-",
         "outputId": "07b039d4-a326-4f27-d76d-cc6012707183"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -702,7 +691,7 @@
         "id": "fO7oTKR8pVpo",
         "outputId": "28038f20-f67c-44f5-a9f7-fadf4f9d6738"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -754,7 +743,7 @@
         "id": "ZO6kSJsWsk1l",
         "outputId": "7ccbfdde-9ea9-4975-a290-7636cc7490ad"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -772,9 +761,106 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# bounding box dinamis"
+      ],
+      "metadata": {
+        "id": "DsQRXxPzu_r-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def grabcut_algorithm(original_image, bounding_box):\n",
+        "\n",
+        "    segment = np.zeros(original_image.shape[:2],np.uint8)\n",
+        "\n",
+        "    x,y,width,height = bounding_box\n",
+        "    segment[y:y+height, x:x+width] = 1\n",
+        "\n",
+        "    background_mdl = np.zeros((1,65), np.float64)\n",
+        "    foreground_mdl = np.zeros((1,65), np.float64)\n",
+        "\n",
+        "    cv2.grabCut(original_image, segment, bounding_box, background_mdl, foreground_mdl, 5,\n",
+        "    cv2.GC_INIT_WITH_RECT)\n",
+        "\n",
+        "    new_mask = np.where((segment==2)|(segment==0),0,1).astype('uint8')\n",
+        "\n",
+        "    original_image = original_image*new_mask[:,:,np.newaxis]\n",
+        "\n",
+        "    cv2.imshow('Result', original_image)"
+      ],
+      "metadata": {
+        "id": "co3KtKG8vKph"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def draw_bounding_box(click, x, y, flag_param, parameters):\n",
+        "    global x_pt, y_pt, drawing, top_left_point, bottom_right_point, original_image\n",
+        "\n",
+        "    if click == cv2.EVENT_LBUTTONDOWN:\n",
+        "        drawing = True\n",
+        "        x_pt, y_pt = x, y\n",
+        "\n",
+        "    elif click == cv2.EVENT_MOUSEMOVE:\n",
+        "        if drawing:\n",
+        "            top_left_point, bottom_right_point = (x_pt,y_pt), (x,y)\n",
+        "            image[y_pt:y, x_pt:x] = 255 - original_image[y_pt:y, x_pt:x]\n",
+        "            cv2.rectangle(image, top_left_point, bottom_right_point, (0,255,0), 2)\n",
+        "\n",
+        "    elif click == cv2.EVENT_LBUTTONUP:\n",
+        "        drawing = False\n",
+        "        top_left_point, bottom_right_point = (x_pt,y_pt), (x,y)\n",
+        "        image[y_pt:y, x_pt:x] = 255 - image[y_pt:y, x_pt:x]\n",
+        "        cv2.rectangle(image, top_left_point, bottom_right_point, (0,255,0), 2)\n",
+        "        bounding_box = (x_pt, y_pt, x-x_pt, y-y_pt)\n",
+        "\n",
+        "        grabcut_algorithm(original_image, bounding_box)"
+      ],
+      "metadata": {
+        "id": "vnAM9UxcvG5A"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__=='__main__':\n",
+        "    drawing = False\n",
+        "    top_left_point, bottom_right_point = (-1,-1), (-1,-1)\n",
+        "\n",
+        "    original_image = cv2.imread(\"robert.jpg\")\n",
+        "    original_image = cv2.resize( original_image ,(500,500))\n",
+        "    image = original_image.copy()\n",
+        "    cv2.namedWindow('Frame')\n",
+        "    cv2.setMouseCallback('Frame', draw_bounding_box)\n",
+        "\n",
+        "    while True:\n",
+        "        cv2.imshow('Frame', image)\n",
+        "        c = cv2.waitKey(1)\n",
+        "        if c == 27:\n",
+        "            break\n",
+        "\n",
+        "    cv2.destroyAllWindows()"
+      ],
+      "metadata": {
+        "id": "wGvU2Dp_vNxs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "sumber\n",
         "\n",
         "https://theailearner.com/tag/cv2-grabcut/\n",
+        "\n",
+        "https://www.analyticsvidhya.com/blog/2022/03/image-segmentation-using-opencv/\n",
         "\n",
         "https://www.youtube.com/watch?v=2iEd2iyK4YE"
       ],
