--- a/detect_color.ipynb
+++ b/detect_color.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTe0p9A7twBr3RJRIq9t7E"
+      "authorship_tag": "ABX9TyNTBslwKSm2XndrJPgJuwP7"
     },
     "kernelspec": {
       "name": "python3",
@@ -372,6 +372,141 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# real time"
+      ],
+      "metadata": {
+        "id": "Xxe737Yi7F6x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Python code for Multiple Color Detection\n",
+        "\n",
+        "import numpy as np\n",
+        "import cv2\n",
+        "\n",
+        "# Capturing video through webcam\n",
+        "webcam = cv2.VideoCapture(0)\n",
+        "\n",
+        "# Start a while loop\n",
+        "while(1):\n",
+        "\n",
+        "    # Reading the video from the\n",
+        "    # webcam in image frames\n",
+        "    _, imageFrame = webcam.read()\n",
+        "\n",
+        "    # Convert the imageFrame in\n",
+        "    # BGR(RGB color space) to\n",
+        "    # HSV(hue-saturation-value)\n",
+        "    # color space\n",
+        "    hsvFrame = cv2.cvtColor(imageFrame, cv2.COLOR_BGR2HSV)\n",
+        "\n",
+        "    # Set range for red color and\n",
+        "    # define mask\n",
+        "    red_lower = np.array([136, 87, 111], np.uint8)\n",
+        "    red_upper = np.array([180, 255, 255], np.uint8)\n",
+        "    red_mask = cv2.inRange(hsvFrame, red_lower, red_upper)\n",
+        "\n",
+        "    # Set range for green color and\n",
+        "    # define mask\n",
+        "    green_lower = np.array([25, 52, 72], np.uint8)\n",
+        "    green_upper = np.array([102, 255, 255], np.uint8)\n",
+        "    green_mask = cv2.inRange(hsvFrame, green_lower, green_upper)\n",
+        "\n",
+        "    # Set range for blue color and\n",
+        "    # define mask\n",
+        "    blue_lower = np.array([94, 80, 2], np.uint8)\n",
+        "    blue_upper = np.array([120, 255, 255], np.uint8)\n",
+        "    blue_mask = cv2.inRange(hsvFrame, blue_lower, blue_upper)\n",
+        "\n",
+        "    # Morphological Transform, Dilation\n",
+        "    # for each color and bitwise_and operator\n",
+        "    # between imageFrame and mask determines\n",
+        "    # to detect only that particular color\n",
+        "    kernel = np.ones((5, 5), \"uint8\")\n",
+        "\n",
+        "    # For red color\n",
+        "    red_mask = cv2.dilate(red_mask, kernel)\n",
+        "    res_red = cv2.bitwise_and(imageFrame, imageFrame,\n",
+        "                            mask = red_mask)\n",
+        "\n",
+        "    # For green color\n",
+        "    green_mask = cv2.dilate(green_mask, kernel)\n",
+        "    res_green = cv2.bitwise_and(imageFrame, imageFrame,\n",
+        "                                mask = green_mask)\n",
+        "\n",
+        "    # For blue color\n",
+        "    blue_mask = cv2.dilate(blue_mask, kernel)\n",
+        "    res_blue = cv2.bitwise_and(imageFrame, imageFrame,\n",
+        "                            mask = blue_mask)\n",
+        "\n",
+        "    # Creating contour to track red color\n",
+        "    contours, hierarchy = cv2.findContours(red_mask,\n",
+        "                                        cv2.RETR_TREE,\n",
+        "                                        cv2.CHAIN_APPROX_SIMPLE)\n",
+        "\n",
+        "    for pic, contour in enumerate(contours):\n",
+        "        area = cv2.contourArea(contour)\n",
+        "        if(area > 300):\n",
+        "            x, y, w, h = cv2.boundingRect(contour)\n",
+        "            imageFrame = cv2.rectangle(imageFrame, (x, y),\n",
+        "                                    (x + w, y + h),\n",
+        "                                    (0, 0, 255), 2)\n",
+        "\n",
+        "            cv2.putText(imageFrame, \"Red Colour\", (x, y),\n",
+        "                        cv2.FONT_HERSHEY_SIMPLEX, 1.0,\n",
+        "                        (0, 0, 255))\n",
+        "\n",
+        "    # Creating contour to track green color\n",
+        "    contours, hierarchy = cv2.findContours(green_mask,\n",
+        "                                        cv2.RETR_TREE,\n",
+        "                                        cv2.CHAIN_APPROX_SIMPLE)\n",
+        "\n",
+        "    for pic, contour in enumerate(contours):\n",
+        "        area = cv2.contourArea(contour)\n",
+        "        if(area > 300):\n",
+        "            x, y, w, h = cv2.boundingRect(contour)\n",
+        "            imageFrame = cv2.rectangle(imageFrame, (x, y),\n",
+        "                                    (x + w, y + h),\n",
+        "                                    (0, 255, 0), 2)\n",
+        "\n",
+        "            cv2.putText(imageFrame, \"Green Colour\", (x, y),\n",
+        "                        cv2.FONT_HERSHEY_SIMPLEX,\n",
+        "                        1.0, (0, 255, 0))\n",
+        "\n",
+        "    # Creating contour to track blue color\n",
+        "    contours, hierarchy = cv2.findContours(blue_mask,\n",
+        "                                        cv2.RETR_TREE,\n",
+        "                                        cv2.CHAIN_APPROX_SIMPLE)\n",
+        "    for pic, contour in enumerate(contours):\n",
+        "        area = cv2.contourArea(contour)\n",
+        "        if(area > 300):\n",
+        "            x, y, w, h = cv2.boundingRect(contour)\n",
+        "            imageFrame = cv2.rectangle(imageFrame, (x, y),\n",
+        "                                    (x + w, y + h),\n",
+        "                                    (255, 0, 0), 2)\n",
+        "\n",
+        "            cv2.putText(imageFrame, \"Blue Colour\", (x, y),\n",
+        "                        cv2.FONT_HERSHEY_SIMPLEX,\n",
+        "                        1.0, (255, 0, 0))\n",
+        "\n",
+        "    # Program Termination\n",
+        "    cv2.imshow(\"Multiple Color Detection in Real-TIme\", imageFrame)\n",
+        "    if cv2.waitKey(10) & 0xFF == ord('q'):\n",
+        "        webcam.release()\n",
+        "        cv2.destroyAllWindows()\n",
+        "        break"
+      ],
+      "metadata": {
+        "id": "Y-Why1Jx7HUe"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
